--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>Company: <%= @project.company.name %></p>
 <p>Default rate: <%= @project.default_rate %></p>
-
+<p>Slug: <%= @project.slug %></p>
 
 <p><%= link_to 'All Projects', projects_path %></p>
 
