--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -3,4 +3,6 @@
 <p>Hours: <%= @work.hours %></p>
 <p>User: <%= @work.user.lname %> <%= @work.user.fname %></p>
 
+<!-- works_path is the name in the index action + _path  -->
+
 <p><%= link_to 'All Works', works_path %></p>
