after adding the helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
    <header>
       <ul>
  <!-- gives the class active only to the active element -->
-         <li<%= controller_name == 'companies' ? raw(' class="active"') : '' %>><%= link_to 'Companies', companies_path %></li>
-         <li<%= controller_name == 'projects' ? raw(' class="active"') : '' %>><%= link_to 'Projects', projects_path %></li>
-         <li<%= controller_name == 'works' ? raw(' class="active"') : '' %>><%= link_to 'Works', works_path %></li>
+ <!-- comment override: now using the nav helper -->
+          <%= display_nav_item('Companies', 'companies', companies_path) %>
+          <%= display_nav_item('Projects', 'projects', projects_path) %>
+          <%= display_nav_item('Works', 'works', works_path) %>
       </ul>
    </header>
    <section id="main">
