--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,11 +1,22 @@
 <h1>Companies: index</h1>
 <p>List of all Companies</p>
 
-<ul>
-   <% @companies.each do |c| %>
-      <li><%= link_to c.name, c %></li>
-   <% end %>
+<table>
+   <tbody>
+      <tr>
+         <th>Company Name</th>
+      </tr>
+      <!-- refactoring the loop with a partial -->
+      <!-- <% @companies.each do |c| %>
+         <tr>
+            <td><%= link_to c, c %></td>
+         </tr>
+      <% end %>    -->
+      <%= render partial: "company", collection: @companies %> 
+   </tbody>
+</table>
 
-</ul>
 
-   
+<% content_for :aside do %>
+   <% render 'sidebar' %>
+<% end %>
