--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,5 +4,29 @@
 <p>Default rate: <%= @project.default_rate %></p>
 <p>Slug: <%= @project.slug %></p>
 
-<p><%= link_to 'All Projects', projects_path %></p>
+<table>
+   <tbody>
+      <tr>
+         <th>View</th>
+         <th>Consultant</th>
+         <th>Project</th>
+         <th>Date & Time</th>
+         <th>Hours</th>
+      </tr>
+      <!-- <% @project.works.each do |w| %>
+         <tr>
+            <td><center><%= link_to 'View', w %></center></td>
+            <td><%= w.user %></td>
+            <td><%= w.project %></td>
+            <td><%= w.datetimeperformed.strftime("%Y-%m-%d %H:%M") %></td>
+            <td><%= w.hours %></td>
+         </tr>
+      <% end %>    -->
+      <%= render partial: "works/work", collection: @project.works %> 
+   </tbody>
+</table>
 
+<!-- <p><%= link_to 'All Projects', projects_path %></p> -->
+<% content_for :aside do %>
+   <% render 'sidebar' %>
+<% end %>
