--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,10 +1,35 @@
 <h1>Works: index</h1>
 <p>List of all Works</p>
 
-<ul>
+<!-- <ul>
    <% @works.each do |w| %>
-      <li><%= link_to w.datetimeperformed, w %></li>
+      <li><%= link_to w, w %></li>
    <% end %>
-</ul>
+</ul> -->
+   
+<table>
+   <tbody>
+      <tr>
+         <th>View</th>
+         <th>Consultant</th>
+         <th>Project</th>
+         <th>Date & Time</th>
+         <th>Hours</th>
+      </tr>
+      <!-- <% @works.each do |w| %>
+         <tr>
+            <td><center><%= link_to 'View', w %></center></td>
+            <td><%= w.user %></td>
+            <td><%= w.project %></td>
+            <td><%= w.datetimeperformed.strftime("%Y-%m-%d %H:%M") %></td>
+            <td><%= w.hours %></td>
+         </tr>
+      <% end %>    -->
+      <%= render partial: "work", collection: @works %>   
+   </tbody>
+</table>
 
+<% content_for :aside do %>
+   <% render 'sidebar' %>
+<% end %>
    
