--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
    </header>
    <section id="main">
       <article>
+         <% if flash[:notice] %>
+            <div class="flash notice"><%= flash[:notice] %></div>
+         <% end %>
          <%= yield %>
       </article>
       <aside>
