--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,17 +1,15 @@
-<h1>Edit Project</h1>
+<h1>New Work</h1>
 
-
-<% if @project.errors.any? %>
+<% if @work.errors.any? %>
    <div id="errors">
-      <p>Please correct the following <%= pluralize(@project.errors.count, "error") %>:</p>
+      <p>Please correct the following <%= pluralize(@work.errors.count, "error") %>:</p>
       <ul>
-         <% @project.errors.full_messages.each do |msg| %>
+         <% @work.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
          <% end %>
       </ul>
    </div>
 <% end %> 
-
 
 
 <%= render 'form' %>
