after adding ajax and an extra js.erb file

--- a/app/assets/stylesheets/general/form.css
+++ b/app/assets/stylesheets/general/form.css
@@ -24,3 +24,10 @@ form div.field_with_errors label {
    color:#900;
    font-weight:bold;
 }
+
+/* for using ajax in the form */
+div.remoteform {
+   background-color:#eee;
+   padding:10px;
+   margin-bottom:20px;
+}
