--- a/app/views/works/_work.html.erb
+++ b/app/views/works/_work.html.erb
@@ -1,3 +1,4 @@
+<!-- partial work -->
          <tr>
             <td><center><%= link_to 'View', work %></center></td>
             <td><%= work.user %></td>
