after adding the file uploading

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -27,6 +27,7 @@
             <th>Project</th>
             <th>Date & Time</th>
             <th>Hours</th>
+            <th>Attachment(s)</th>
          </tr>
  
          <%= render partial: "works/work", collection: @project.works %> 
