--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -15,6 +15,7 @@
          <th>Project</th>
          <th>Date & Time</th>
          <th>Hours</th>
+         <th>Attachment(s)</th>
       </tr>
       <!-- <% @works.each do |w| %>
          <tr>
