--- a/app/views/works/_work.html.erb
+++ b/app/views/works/_work.html.erb
@@ -5,4 +5,5 @@
             <td><%= work.project %></td>
             <td><%= work.datetimeperformed.strftime("%Y-%m-%d %H:%M") %></td>
             <td><%= work.hours %></td>
+            <td><%= work.doc %></td>
          </tr>
