after refactoring the aside

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
       </article>
       <aside>
          <%= user_logged_in_msg %>
-         <%= yield :aside %>
+         <!-- victims of refactoring.. -->
+            <%= sidebar %>
       </aside>
    </section>
    <footer>
