--- a/app/views/companies/_sidebar.html.erb
+++ b/app/views/companies/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<ul>
+static side partial<ul>
    <li><%= link_to 'All Companies', companies_path %></li>
    <li><%= link_to 'New Company', new_company_path %></li>
 </ul>
