--- a/app/views/usermailer/projectupdated_email.text.erb
+++ b/app/views/usermailer/projectupdated_email.text.erb
@@ -1,6 +1,6 @@
 Existing Project Updated
 =======================================================
-User <%= @project.user %> updated the project:
+User <%= @project.owner %> updated the project:
 <%= @project.created_at.strftime('%Y-%m-%d %I:%M %p') %>
 Project: <%= @project.name %>
 
