--- a/app/views/usermailer/projectupdated_email.html.erb
+++ b/app/views/usermailer/projectupdated_email.html.erb
@@ -5,7 +5,7 @@
    </head>
    <body>
       <h1>Existing Project updated</h1>
-      <p>User <%= @project.user %> updated an existing Project:
+      <p>User <%= @project.owner %> updated an existing Project:
       <br><%= @project.created_at.strftime('%Y-%m-%d %I:%M %p') %>
       <br>Project: <%= @project.name %>
    </body>
