--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,12 +1,6 @@
 <h1>Works: index</h1>
 <p>List of all Works</p>
 
-<!-- <ul>
-   <% @works.each do |w| %>
-      <li><%= link_to w, w %></li>
-   <% end %>
-</ul> -->
-   
 <table>
    <tbody>
       <tr>
@@ -17,20 +11,18 @@
          <th>Hours</th>
          <th>Attachment(s)</th>
       </tr>
-      <!-- <% @works.each do |w| %>
-         <tr>
-            <td><center><%= link_to 'View', w %></center></td>
-            <td><%= w.user %></td>
-            <td><%= w.project %></td>
-            <td><%= w.datetimeperformed.strftime("%Y-%m-%d %H:%M") %></td>
-            <td><%= w.hours %></td>
-         </tr>
-      <% end %>    -->
       <%= render partial: "work", collection: @works %>   
    </tbody>
 </table>
+
+
+<div class="digg_pagination" style="padding:15px;">
+<%= will_paginate @works, :container => false %>
+</div>
+
 
 <% content_for :aside do %>
    <% render 'sidebar' %>
 <% end %>
    
+
